# netadmin

./: .gitignore  Cargo.toml  README.md
netadmin_minion/: Cargo.toml  README.md
netadmin_minion/resources/: minion.yaml  netadmin-certgen.yaml  netadmin-minion.yaml
netadmin_minion/resources/certgen/: store.pass
netadmin_minion/resources/test/: client.netadmin.test.crt  client.netadmin.test.key  minion.netadmin.test.crt  minion.netadmin.test.key
netadmin_minion/scripts/: deb-install.sh  deb-service.sh  deb-uninstall.sh  win-install.cmd  win-uninstall.cmd
netadmin_minion/src/: lib.rs  log.rs  main.rs  minion_main.rs  net.rs  tests.rs
netadmin_minion/test/: LegacyExecTest.scala  MinionInfoTest.java  TestMinion.java  run-LegacyExecTest.sh  run-MinionInfoTest.sh
netadmin_server/: Cargo.toml
netadmin_server/src/: main.rs
