[package]
name = "netadmin_minion"
version = "0.1.0"
edition = "2021"
authors = ["Georgiy Korneev <kgeorgiy@kgeorgiy.info>"]
description = "NetAdmin minion"
license = "AGPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
async-trait = "0.1.71"
bytes = "1.4.0"
chrono = { version = "0.4.26", features = ["serde"] }
rcgen = "0.11.1"
rustls-pemfile = "1.0.3"
serde = { version = "1.0.169", features = ["derive"] }
serde_json = "1.0.100"
serde_yaml = "0.9.22"
tokio = { version = "1.29.1", features = ["net", "macros", "rt-multi-thread", "time", "io-util", "process", "sync"] }
tokio-rustls = "0.24.1"
tracing = "0.1.37"
tracing-appender = "0.2.2"
tracing-subscriber = "0.3.17"
tracing-test = "0.2.4"
